--- a/source/catalog.html
+++ b/source/catalog.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header class="page-header">
-      <a class="page-header__logo">
+      <a href="index.html" class="page-header__logo">
         <img class="page-header__logo-image" src="img/logotype-mobile.svg" width="150" height="30" alt="Мишка">
       </a>
       <button class="page-header__toggle" type="button"></button>
@@ -17,7 +17,7 @@
               <a href="">Каталог товаров</a>
             </li>
             <li class="site-list__item">
-              <a href="">Вязание на заказ</a>
+              <a href="form.html">Вязание на заказ</a>
             </li>
             <li class="site-list__item">
               <a href="">Поиск по сайту</a>
