Исправила согласно замечаниям

--- a/source/index.html
+++ b/source/index.html
@@ -11,8 +11,8 @@
       </a>
       <button class="page-header__toggle" type="button"></button>
       <button class="page-header__toggle page-header__toggle--close" type="button"></button>
-      <div class="main-nav__wrapper">
-          <ul class="main-nav__list site-list">
+      <div class="page-header__wrapper">
+          <ul class="page-header__list site-list">
             <li class="site-list__item site-list__item--active">
               <a href="catalog.html">Каталог товаров</a>
             </li>
@@ -30,9 +30,15 @@
     </header>
 
     <section class="product-category">
-      <header class="product-category__header"></header>
-      <div class="product-category__interior">Предметы интерьера</div>
-      <div class="product-category__toys">Детские игрушки</div>
+      <a href="" class="product-category__link">
+        <header class="product-category__header">Милые штуки ручной работы для дома</header>
+      </a>
+      <a href="" class="product-category__link">
+        <div class="product-category__interior">Предметы интерьера</div>
+      </a>
+      <a href="" class="product-category__link">
+        <div class="product-category__toys">Детские игрушки</div>
+      </a>
     </section>
 
       <section class="popular-product">
