--- a/source/catalog.html
+++ b/source/catalog.html
@@ -11,8 +11,8 @@
       </a>
       <button class="page-header__toggle" type="button"></button>
       <button class="page-header__toggle page-header__toggle--close" type="button"></button>
-      <div class="main-nav__wrapper">
-          <ul class="main-nav__list site-list">
+      <div class="page-header__wrapper">
+          <ul class="page-header__list site-list">
             <li class="site-list__item site-list__item--active">
               <a href="">Каталог товаров</a>
             </li>
@@ -36,20 +36,26 @@
     <section class="catalog-item">
       <ul class="catalog-item__list">
         <li class="catalog-item__prodact prodact">
-          <img src="" class="prodact__image">
-          <h3 class="prodact__title">Зайчик-попрыгайчик</h3>
+          <a href="" class="prodact__link">
+            <img src="" class="prodact__image">
+            <h3 class="prodact__title">Зайчик-попрыгайчик</h3>
+          </a>
           <p class="prodact__characteristic">Рост 30 см вес 200 г</p>
           <p class="prodact__price"> 1 200 руб.</p>
         </li>
         <li class="catalog-item__prodact prodact">
-          <img src="" class="prodact__image">
-          <h3 class="prodact__title">Корзинка для белья</h3>
+          <a href="" class="prodact__link">
+            <img src="" class="prodact__image">
+            <h3 class="prodact__title">Корзинка для белья</h3>
+          </a>
           <p class="prodact__characteristic">Диаметр 15 см высота 10 см</p>
           <p class="prodact__price"> 690 руб.</p>
         </li>
         <li class="catalog-item__prodact prodact">
-          <img src="" class="prodact__image">
-          <h3 class="prodact__title">Большая корзинка для игрушек</h3>
+          <a href="" class="prodact__link">
+            <img src="" class="prodact__image">
+            <h3 class="prodact__title">Большая корзинка для игрушек</h3>
+          </a>
           <p class="prodact__characteristic">Диаметр 30 см высота 30 см</p>
           <p class="prodact__price"> 1 500 руб.</p>
         </li>
