--- a/source/form.html
+++ b/source/form.html
@@ -11,8 +11,8 @@
       </a>
       <button class="page-header__toggle" type="button"></button>
       <button class="page-header__toggle page-header__toggle--close" type="button"></button>
-      <div class="main-nav__wrapper">
-          <ul class="main-nav__list site-list">
+      <div class="page-header__wrapper">
+          <ul class="page-header__list site-list">
             <li class="site-list__item site-list__item--active">
               <a href="catalog.html">Каталог товаров</a>
             </li>
