--- a/source/index.html
+++ b/source/index.html
@@ -5,8 +5,108 @@
     <title>HTML Academy: Мишка</title>
   </head>
   <body>
+    <header class="page-header">
+      <a class="page-header__logo">
+        <img class="page-header__logo-image" src="img/logotype-mobile.svg" width="150" height="30" alt="Мишка">
+      </a>
+      <button class="page-header__toggle" type="button"></button>
+      <button class="page-header__toggle page-header__toggle--close" type="button"></button>
+      <div class="main-nav__wrapper">
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item site-list__item--active">
+              <a href="">Каталог товаров</a>
+            </li>
+            <li class="site-list__item">
+              <a href="">Вязание на заказ</a>
+            </li>
+            <li class="site-list__item">
+              <a href="">Поиск по сайту</a>
+            </li>
+            <li class="site-list__item">
+              <a href="#">Корзина: пока пуста</a>
+            </li>
+          </ul>
+      </div>
+    </header>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">Профессиональный HTML и CSS</a>», уровень 2.</p>
+    <section class="product-category">
+      <header class="product-category__header"></header>
+      <div class="product-category__interior">Предметы интерьера</div>
+      <div class="product-category__toys">Детские игрушки</div>
+    </section>
+
+      <section class="popular-product">
+        <header class="popular-product__header">Вязаные корзинки</header>
+        <p class="popular-product__time">Товар недели</p>
+        <p class="popular-product__description">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
+        <table class="popular-product__property">
+          <tr>
+            <td>Цвет:</td>
+            <td>"Тиффани"/серый</td>
+          </tr>
+          <tr>
+            <td>Диаметр:</td>
+            <td>25 см</td>
+          </tr>
+          <tr>
+            <td>Высота:</td>
+            <td>15 см</td>
+          </tr>
+        </table>
+        <img src="" class="popular-product__image">
+        <p class="popular-product__price">Цена: 990 руб.</p>
+        <button class="popular-product__button button" type="button">Заказать</button>
+      </section>
+
+      <section class="advantages">
+        <h2 class="advantages__title">Коротко о нас</h2>
+        <ul class="advantages__list">
+          <li class="advantages__item">Экологически чистые материалы</li>
+          <li class="advantages__item">Скандинавский стиль по российской цене</li>
+          <li class="advantages__item">Увеличивает лайки на фотографиях</li>
+          <li class="advantages__item">Связано вручную с любовью и умилением</li>
+          <li class="advantages__item">Поддержка отечественного производителя</li>
+          <li class="advantages__item">Поставляется в подарочной упаковке</li>
+        </ul>
+      </section>
+
+      <section class="comments">
+        <h2 class="comments__title">Отзывы</h2>
+        <p class="comments__text">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
+        <p class="comments__autor">Анастасия Красильникова</p>
+        <p class="comments__email">@misssssiskras</p>
+        <button class="comments__prev" type="button"><p class="visually-hidden">Предыдущий отзыв</p></button>
+        <button class="comments__next" type="button"><p class="visually-hidden">Следующий отзыв</p></button>
+        <button class="comments__button button" type="button">Написать</button>
+      </section>
+
+      <section class="contacts">
+        <h2 class="contacts__title">Контакты</h2>
+        <p class="contacts__email">info@mimimishkashop.ru</p>
+        <p class="contacts__adress">г. Санкт-Петербург,ул. Большая Конюшенная, д. 19/8, офис 101</p>
+        <iframe src="" class="contacts__map"></iframe>
+        <button class="contacts__button button" type="button">Напишите нам</button>
+      </section>
+
+      <footer class="footer">
+        <div class="footer__social social">
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy"><p class="visually-hidden">Мы в Инстаграме</p></a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy"><p class="visually-hidden">Мы в Фейсбуке</p></a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--vkontakte" href="https://twitter.com/htmlacademy_ru"><p class="visually-hidden"> Мы в Твиттере</p></a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__copyright copyright">
+          <b class="copyright__text">Разработано</b>
+          <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><img src=""></a>
+        </div>
+    </footer>
 
   </body>
 </html>
