--- a/source/form.html
+++ b/source/form.html
@@ -30,7 +30,7 @@
     </header>
 
     <div class="order-knitting">
-      <h2 class="order-knittingg__title">Вязание на заказ</h2>
+      <h2 class="order-knitting__title">Вязание на заказ</h2>
       <p class="order-knitting__text">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
     </div>
 
