--- a/source/index.html
+++ b/source/index.html
@@ -6,18 +6,18 @@
   </head>
   <body>
     <header class="page-header">
-      <a class="page-header__logo">
+      <a href="index.html" class="page-header__logo">
         <img class="page-header__logo-image" src="img/logotype-mobile.svg" width="150" height="30" alt="Мишка">
       </a>
       <button class="page-header__toggle" type="button"></button>
       <button class="page-header__toggle page-header__toggle--close" type="button"></button>
-      <div class="main-nav__wrapper">
-          <ul class="main-nav__list site-list">
+      <div class="page-header__wrapper">
+          <ul class="page-header__list site-list">
             <li class="site-list__item site-list__item--active">
               <a href="">Каталог товаров</a>
             </li>
             <li class="site-list__item">
-              <a href="">Вязание на заказ</a>
+              <a href="form.html">Вязание на заказ</a>
             </li>
             <li class="site-list__item">
               <a href="">Поиск по сайту</a>
