Страница каталога LESS

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -2,31 +2,34 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta content="width=320" name="viewport">
     <title>HTML Academy: Мишка</title>
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="page-header">
       <a href="index.html" class="page-header__logo">
-        <img class="page-header__logo-image" src="img/logotype-mobile.svg" width="150" height="30" alt="Мишка">
+        <img class="page-header__logo-image" src="img/logo-mobile.svg" width="150" height="30" alt="Мишка">
       </a>
       <button class="page-header__toggle" type="button"></button>
       <button class="page-header__toggle page-header__toggle--close" type="button"></button>
       <div class="page-header__wrapper">
+
           <ul class="page-header__list site-list">
             <li class="site-list__item site-list__item--active">
-              <a href="">Каталог товаров</a>
+              <a class="site-list__link link" href="">Каталог товаров</a>
             </li>
             <li class="site-list__item">
-              <a href="form.html">Вязание на заказ</a>
+              <a class="site-list__link link" href="form.html">Вязание на заказ</a>
             </li>
             <li class="site-list__item">
-              <a href="">Поиск по сайту</a>
+              <a class="site-list__link link" href="">Поиск по сайту</a>
             </li>
             <li class="site-list__item">
-              <a href="#">Корзина: пока пуста</a>
+              <a class="site-list__link link" href="#">Корзина: пока пуста</a>
             </li>
           </ul>
+
       </div>
     </header>
 
@@ -37,24 +40,24 @@
     <section class="catalog-item">
       <ul class="catalog-item__list">
         <li class="catalog-item__prodact prodact">
-          <a href="" class="prodact__link">
-            <img src="" class="prodact__image">
+          <a href="" class="prodact__link link">
+            <img src="img/photo-hare-mobile@1x.jpg" class="prodact__image">
             <h3 class="prodact__title">Зайчик-попрыгайчик</h3>
           </a>
           <p class="prodact__characteristic">Рост 30 см вес 200 г</p>
           <p class="prodact__price"> 1 200 руб.</p>
         </li>
         <li class="catalog-item__prodact prodact">
-          <a href="" class="prodact__link">
-            <img src="" class="prodact__image">
+          <a href="" class="prodact__link link">
+            <img src="img/photo-bowl-mobile@1x.jpg" class="prodact__image">
             <h3 class="prodact__title">Корзинка для белья</h3>
           </a>
           <p class="prodact__characteristic">Диаметр 15 см высота 10 см</p>
           <p class="prodact__price"> 690 руб.</p>
         </li>
         <li class="catalog-item__prodact prodact">
-          <a href="" class="prodact__link">
-            <img src="" class="prodact__image">
+          <a href="" class="prodact__link link">
+            <img src="img/photo-toys-mobile@1x.jpg" class="prodact__image">
             <h3 class="prodact__title">Большая корзинка для игрушек</h3>
           </a>
           <p class="prodact__characteristic">Диаметр 30 см высота 30 см</p>
@@ -63,31 +66,33 @@
       </ul>
     </section>
 
-      <section class="production-process">
-        <h2 class="production-process__title">Процесс производства</h2>
-        <video class="production-process__video"></video>
-        <p class="production-process__text">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
-        <button class="production-process__button" type="button">Сделать заказ</button>
-      </section>
+    <section class="production-process">
+      <h2 class="production-process__title">Процесс производства</h2>
+      <img src="img/video-mobile@1x.jpg" width="260" height="150">
+      <p class="production-process__text">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
+      <button class="production-process__button button" type="button">Сделать заказ</button>
+    </section>
 
-      <footer class="footer">
-        <div class="footer__social social">
-          <ul class="social__list">
-            <li class="social__item">
-              <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy"><p class="visually-hidden">Мы в Инстаграме</p></a>
-            </li>
-            <li class="social__item">
-              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy"><p class="visually-hidden">Мы в Фейсбуке</p></a>
-            </li>
-            <li class="social__item">
-              <a class="social__link social__link--vkontakte" href="https://twitter.com/htmlacademy_ru"><p class="visually-hidden"> Мы в Твиттере</p></a>
-            </li>
-          </ul>
-        </div>
-        <div class="footer__copyright copyright">
-          <b class="copyright__text">Разработано</b>
-          <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><img src=""></a>
-        </div>
+    <footer class="footer">
+
+      <div class="footer__social social">
+        <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link social__link--instagram link" href="https://www.instagram.com/htmlacademy"><p class="visually-hidden">Мы в Инстаграме</p></a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--facebook link" href="https://www.facebook.com/htmlacademy"><p class="visually-hidden">Мы в Фейсбуке</p></a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--vkontakte link" href="https://twitter.com/htmlacademy_ru"><p class="visually-hidden"> Мы в Твиттере</p></a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="footer__copyright copyright">
+        <b class="copyright__text">Разработано</b>
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><img src="img/logo-htmlacademy.svg"></a>
+      </div>
     </footer>
 
   </body>
