--- a/source/index.html
+++ b/source/index.html
@@ -17,7 +17,7 @@
 
           <ul class="page-header__list site-list">
             <li class="site-list__item site-list__item--active">
-              <a class="site-list__link link" href="">Каталог товаров</a>
+              <a class="site-list__link link" href="catalog.html">Каталог товаров</a>
             </li>
             <li class="site-list__item">
               <a class="site-list__link link" href="form.html">Вязание на заказ</a>
