--- a/source/form.html
+++ b/source/form.html
@@ -9,31 +9,35 @@
   <body>
     <header class="page-header">
       <a href="index.html" class="page-header__logo">
-        <img class="page-header__logo-image" src="img/logotype-mobile.svg" width="150" height="30" alt="Мишка">
+        <img class="page-header__logo-image" src="img/logo-mobile.svg" width="150" height="30" alt="Мишка">
       </a>
       <button class="page-header__toggle" type="button"></button>
       <button class="page-header__toggle page-header__toggle--close" type="button"></button>
       <div class="page-header__wrapper">
-          <ul class="page-header__list site-list">
-            <li class="site-list__item site-list__item--active">
-              <a href="catalog.html">Каталог товаров</a>
-            </li>
-            <li class="site-list__item">
-              <a href="">Вязание на заказ</a>
-            </li>
-            <li class="site-list__item">
-              <a href="">Поиск по сайту</a>
-            </li>
-            <li class="site-list__item">
-              <a href="#">Корзина: пока пуста</a>
-            </li>
-          </ul>
+
+        <ul class="page-header__list site-list">
+          <li class="site-list__item site-list__item--active">
+            <a class="site-list__link link" href="catalog.html">Каталог товаров</a>
+          </li>
+          <li class="site-list__item">
+            <a class="site-list__link link" href="">Вязание на заказ</a>
+          </li>
+          <li class="site-list__item">
+            <a class="site-list__link link" href="">Поиск по сайту</a>
+          </li>
+          <li class="site-list__item">
+            <a class="site-list__link link" href="#">Корзина: пока пуста</a>
+          </li>
+        </ul>
+
       </div>
     </header>
 
     <div class="order-knitting">
-      <h2 class="order-knitting__title">Вязание на заказ</h2>
-      <p class="order-knitting__text">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
+      <div class="order-knitting__fon">
+        <h2 class="order-knitting__title">Вязание на заказ</h2>
+      </div>
+        <p class="order-knitting__text">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
     </div>
 
     <section class="form">
@@ -44,11 +48,11 @@
           <ul class="filter__list type">
             <li class="type__item">
               <input class="visually-hidden type__input type__input--radio" type="radio" name="accessories" id="accessories-id" checked>
-              <label for="accessories-id">Аксессуар для интерьера</label>
+              <label class="type__name" for="accessories-id">Аксессуар для интерьера</label>
             </li>
             <li class="type__item">
               <input class="visually-hidden type__input type__input--radio" type="radio" name="toy" id="toy-id">
-              <label for="toy-id">Детская игрушка</label>
+              <label class="type__name" for="toy-id">Детская игрушка</label>
             </li>
           </ul>
         </div>
@@ -62,15 +66,15 @@
             </li>
             <li class="color__item">
               <input class="visually-hidden color-input color-input-checkbox" type="checkbox" name="grey" id="grey-id" checked>
-              <label for="grey-id">Серый</label>
+              <label class="color__name" for="grey-id">Серый</label>
             </li>
             <li class="color__item">
               <input class="visually-hidden color-input color-input-checkbox" type="checkbox" name="tiffany" id="tiffany-id">
-              <label for="tiffany-id">"Тиффани"</label>
+              <label class="color__name" for="tiffany-id">"Тиффани"</label>
             </li>
             <li class="color__item">
               <input class="visually-hidden color-input color-input-checkbox" type="checkbox" name="black" id="black-id">
-              <label for="black-id">Черный</label>
+              <label  class="color__name" for="black-id">Черный</label>
             </li>
             <li class="color__item">
               <input class="visually-hidden color-input color-input-checkbox" type="checkbox" name="pink" id="pink-id">
@@ -111,7 +115,7 @@
             </div>
             <div class="filter__list comments">
               <label for="comments-id" class="filter__title">Доп</label>
-              <textarea class="comments__text" type="email" name="email" id="comments-id" rows="7" cols="50" placeholder="Опишите все ваши пожелания к заказу*"></textarea>
+              <textarea class="comments__text" type="email" name="email" id="comments-id" rows="4" cols="30" placeholder="Опишите все ваши пожелания к заказу*"></textarea>
             </div>
           </div>
         <p class="form-notice">*Поля обязательны для заполнения</p>
@@ -120,24 +124,26 @@
     </section>
 
 
-      <footer class="footer">
-        <div class="footer__social social">
-          <ul class="social__list">
-            <li class="social__item">
-              <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy"><p class="visually-hidden">Мы в Инстаграме</p></a>
-            </li>
-            <li class="social__item">
-              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy"><p class="visually-hidden">Мы в Фейсбуке</p></a>
-            </li>
-            <li class="social__item">
-              <a class="social__link social__link--vkontakte" href="https://twitter.com/htmlacademy_ru"><p class="visually-hidden"> Мы в Твиттере</p></a>
-            </li>
-          </ul>
-        </div>
-        <div class="footer__copyright copyright">
-          <b class="copyright__text">Разработано</b>
-          <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><img src=""></a>
-        </div>
+    <footer class="footer">
+
+      <div class="footer__social social">
+        <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link social__link--instagram link" href="https://www.instagram.com/htmlacademy"><p class="visually-hidden">Мы в Инстаграме</p></a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--facebook link" href="https://www.facebook.com/htmlacademy"><p class="visually-hidden">Мы в Фейсбуке</p></a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--vkontakte link" href="https://twitter.com/htmlacademy_ru"><p class="visually-hidden"> Мы в Твиттере</p></a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="footer__copyright copyright">
+        <b class="copyright__text">Разработано</b>
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><img src="img/logo-htmlacademy.svg"></a>
+      </div>
     </footer>
 
   </body>
