--- a/source/index.html
+++ b/source/index.html
@@ -2,129 +2,168 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <meta content="width=320" name="viewport">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>HTML Academy: Мишка</title>
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
+    <div class="center-wrapper">
     <header class="page-header">
       <a href="index.html" class="page-header__logo">
-        <img class="page-header__logo-image" src="img/logo-mobile.svg" width="150" height="30" alt="Мишка">
+        <img class="page-header__logo-mobile" src="img/logo-mobile.svg" width="86" height="35" alt="Мишка">
+        <img class="page-header__logo-tablet" src="img/logo-tablet.svg" width="113" height="46" alt="Мишка">
+        <img class="page-header__logo-desktop" src="img/logo-desktop.svg" width="149" height="72" alt="Мишка">
       </a>
-      <button class="page-header__toggle" type="button"></button>
-      <button class="page-header__toggle page-header__toggle--close" type="button"></button>
-      <div class="page-header__wrapper">
+      <a class="page-header__toggle" href="">
+        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="19.958px" height="14px" viewBox="0 0 19.958 14" enable-background="new 0 0 19.958 14" xml:space="preserve">
+          <rect fill="#231F20" width="19.958" height="2"/>
+          <rect y="6" fill="#231F20" width="19.958" height="2"/>
+          <rect y="12" fill="#231F20" width="19.958" height="2"/>
+        </svg>
+      </a>
+      <a class="page-header__toggle page-header__toggle--close" href=""></a>
 
-          <ul class="page-header__list site-list">
-            <li class="site-list__item site-list__item--active">
-              <a class="site-list__link link" href="catalog.html">Каталог товаров</a>
-            </li>
-            <li class="site-list__item">
-              <a class="site-list__link link" href="form.html">Вязание на заказ</a>
-            </li>
-            <li class="site-list__item">
-              <a class="site-list__link link" href="">Поиск по сайту</a>
-            </li>
-            <li class="site-list__item">
-              <a class="site-list__link link" href="#">Корзина: пока пуста</a>
-            </li>
-          </ul>
-
+      <div class="page-header__site-list  page-header__site-list--order1">
+        <a class="page-header__link link" href="catalog.html">Каталог товаров</a>
+      </div>
+      <div class="page-header__site-list page-header__site-list--order2">
+        <a class="page-header__link link" href="form.html">Вязание на заказ</a>
+      </div>
+      <div class="page-header__site-list page-header__site-list--order3">
+        <a class="page-header__link link" href="">Поиск по сайту</a>
+      </div>
+      <div class="page-header__site-list page-header__site-list--order4">
+        <a class="page-header__link link" href="#">Корзина: пока пуста</a>
+      </div>
+      <div class="page-header__site-list page-header__site-list--order5">
+        <a class="page-header__link page-header__link--desktop link" href="#">Новые поступления</a>
+      </div>
+      <div class="page-header__site-list page-header__site-list--order6">
+        <a class="page-header__link page-header__link--desktop link" href="#">Распродажа</a>
+      </div>
+      <div class="page-header__site-list page-header__site-list--order7">
+        <a class="page-header__link page-header__link--tablet link" href="#">Бесплатная доставка по России</a>
       </div>
     </header>
 
+    <div class="product-category__img"></div>
     <section class="product-category">
       <header class="product-category__header"><p class="product-category__title"> Милые штуки ручной<br>работы для дома</p></header>
-      <a href="" class="product-category__link link">
-        <div class="product-category__interior"><p class="product-category__text">Предметы интерьера</p></div>
-      </a>
-      <a href="" class="product-category__link link">
-        <div class="product-category__toys"><p class="product-category__text">Детские игрушки</p></div>
-      </a>
+      <div class="product-category__wrapper">
+        <a href="" class="product-category__link link">
+          <div class="product-category__interior"><p class="product-category__text">Предметы интерьера</p></div>
+        </a>
+        <a href="" class="product-category__link link">
+          <div class="product-category__toys"><p class="product-category__text">Детские игрушки</p></div>
+        </a>
+      </div>
     </section>
 
     <section class="popular-product">
-      <header class="popular-product__header">Вязаные корзинки</header>
-      <p class="popular-product__time">Товар недели</p>
-      <p class="popular-product__description">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
-      <table class="popular-product__property">
-        <tr>
-          <td class="popular-product__string">Цвет:</td>
-          <td class="popular-product__string">"Тиффани"/серый</td>
-        </tr>
-        <tr>
-          <td class="popular-product__string">Диаметр:</td>
-          <td class="popular-product__string">25 см</td>
-        </tr>
-        <tr>
-          <td class="popular-product__string">Высота:</td>
-          <td class="popular-product__string">15 см</td>
-        </tr>
-      </table>
-      <img src="img/triple-set-mobile@1x.jpg" class="popular-product__image">
-      <p class="popular-product__price">Цена: 990 руб.</p>
-      <button class="popular-product__button button" type="button">Заказать</button>
+      <div class="popular-product__flex">
+        <header class="popular-product__header">Вязаные корзинки</header>
+        <p class="popular-product__time">Товар недели</p>
+      </div>
+      <div class="popular-product__wrapper">
+        <p class="popular-product__description">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
+        <table class="popular-product__property">
+          <tr>
+            <td class="popular-product__string">Цвет:</td>
+            <td class="popular-product__string">"Тиффани"/серый</td>
+          </tr>
+          <tr>
+            <td class="popular-product__string">Диаметр:</td>
+            <td class="popular-product__string">25 см</td>
+          </tr>
+          <tr>
+            <td class="popular-product__string">Высота:</td>
+            <td class="popular-product__string">15 см</td>
+          </tr>
+        </table>
+        <div class="popular-product__wrapper-img">
+          <img src="img/triple-set-mobile@1x.jpg" class="popular-product__image-mobile">
+          <img src="img/triple-set-tablet@1x.jpg" class="popular-product__image-tablet" width="333" height="404">
+          <img src="img/triple-set-desktop@1x.jpg" class="popular-product__image-desktop">
+        </div>
+        <p class="popular-product__price">Цена: 990 руб.</p>
+        <button class="popular-product__button button" type="button">Заказать</button>
+      </div>
     </section>
 
     <section class="advantages">
       <h2 class="advantages__title">Коротко о нас:</h2>
       <ul class="advantages__list">
-        <li class="advantages__item">Экологически чистые материалы</li>
-        <li class="advantages__item">Скандинавский стиль по российской цене</li>
-        <li class="advantages__item">Увеличивает лайки на фотографиях</li>
-        <li class="advantages__item">Связано вручную с любовью и умилением</li>
+        <li class="advantages__item">Экологически<br>чистые материалы</li>
+        <li class="advantages__item">Скандинавский стиль<br>по российской цене</li>
+        <li class="advantages__item">Увеличивает лайки<br>на фотографиях</li>
+        <li class="advantages__item">Связано вручную с<br>любовью и умилением</li>
         <li class="advantages__item">Поддержка отечественного производителя</li>
-        <li class="advantages__item">Поставляется в подарочной упаковке</li>
+        <li class="advantages__item">Поставляется в<br>подарочной упаковке</li>
       </ul>
     </section>
 
     <section class="comments">
       <h2 class="comments__title">Отзывы</h2>
       <p class="comments__text">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
-      <p class="comments__autor">Анастасия Красильникова</p>
-      <p class="comments__email">@misssssiskras</p>
-      <div class="comments__button-wrapper">
-        <button class="comments__prev" type="button"><p class="visually-hidden">Предыдущий отзыв</p></button>
-        <button class="comments__next" type="button"><p class="visually-hidden">Следующий отзыв</p></button>
+      <div class="comments__wrapper">
+        <div class="comments__wrapper-autor">
+          <p class="comments__autor">Анастасия Красильникова</p>
+          <p class="comments__email">@misssssiskras</p>
+        </div>
+        <div class="comments__button-wrapper">
+          <button class="comments__prev" type="button"><p class="visually-hidden">Предыдущий отзыв</p>
+            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="50px" height="26.003px" viewBox="0 0 50 26.003" enable-background="new 0 0 50 26.003" xml:space="preserve">
+              <polygon points="50,11.002 7.659,11.002 15.833,2.828 13.005,0 0,12.998 0.003,13.001 0,13.005 13.005,26.003 15.833,23.175 7.661,15.002 50,15.002 "/>
+            </svg>
+          </button>
+          <button class="comments__next" type="button"><p class="visually-hidden">Следующий отзыв</p>
+            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="50px" height="26.003px" viewBox="0 0 50 26.003" enable-background="new 0 0 50 26.003" xml:space="preserve">
+              <polygon points="0,11.002 42.341,11.002 34.166,2.828 36.995,0 50,12.998 49.996,13.001 50,13.005 36.995,26.003 34.166,23.175 42.339,15.002 0,15.002 "/>
+            </svg>
+          </button>
+        </div>
       </div>
       <button class="comments__button button" type="button">Написать</button>
     </section>
 
     <section class="contacts">
       <h2 class="contacts__title">Контакты</h2>
-      <table class="contacts__table">
-        <tr>
-          <td class="contacts__adress-name">e-mail:</td>
-          <td class="contacts__adress contacts__adress--underline">info@mimimishkashop.ru</td>
-        </tr>
-        <tr>
-          <td class="contacts__adress-name">адрес:</td>
-          <td class="contacts__adress">г. Санкт-Петербург, ул. Большая<br>Конюшенная,<br>д. 19/8, офис 101</td>
-        </tr>
-      </table>
-      <img src="img/map-mobile@1x.jpg" width="320" height="457" class="contacts__map"></iframe>
+      <section class="contacts__table">
+        <div class="contacts__wrapper">
+          <p class="contacts__adress-name">e-mail:</p>
+          <p class="contacts__adress contacts__adress--underline">info@mimimishkashop.ru</p>
+        </div>
+        <div class="contacts__wrapper">
+          <p class="contacts__adress-name">адрес:</p>
+          <p class="contacts__adress">г. Санкт-Петербург,<br>ул. Большая<br>Конюшенная,<br>д. 19/8, офис 101</p>
+        </div>
+      </section>
+      <iframe src="https://yandex.ru/map-widget/v1/-/CBBWeFQTCC" width="auto" height="457" frameborder="1" allowfullscreen="true" class="contacts__map"></iframe>
+
       <button class="contacts__button button" type="button">Напишите нам</button>
     </section>
 
     <footer class="footer">
+      <img src="img/logo-footer.svg" class="footer__logo">
 
       <div class="footer__social social">
         <ul class="social__list">
           <li class="social__item">
-            <a class="social__link social__link--instagram link" href="https://www.instagram.com/htmlacademy"><p class="visually-hidden">Мы в Инстаграме</p></a>
+            <a class="social__link social__link--instagram link" href="https://www.instagram.com/htmlacademy"><p class="visually-hidden">Мы в Инстаграме</p>
+            </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--facebook link" href="https://www.facebook.com/htmlacademy"><p class="visually-hidden">Мы в Фейсбуке</p></a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--vkontakte link" href="https://twitter.com/htmlacademy_ru"><p class="visually-hidden"> Мы в Твиттере</p></a>
+            <a class="social__link social__link--twitter link" href="https://twitter.com/htmlacademy_ru"><p class="visually-hidden"> Мы в Твиттере</p></a>
           </li>
         </ul>
       </div>
 
       <div class="footer__copyright copyright">
         <b class="copyright__text">Разработано</b>
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><img src="img/logo-htmlacademy.svg"></a>
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><img src="img/logo-htmlacademy.svg" width="27" height="34"></a>
       </div>
     </footer>
 
@@ -138,6 +177,6 @@
       </div>
       <button class="modal-order__button button" type="button">Заказать</button>
     </section>
-
+</div>
   </body>
 </html>
