--- a/source/catalog.html
+++ b/source/catalog.html
@@ -57,7 +57,7 @@
           <li class="catalog-item__prodact">
             <div class="catalog-item__wrapper">
               <a href="" class="prodact__img-link link">
-                <img src="img/photo-hare-mobile@1x.jpg" class="catalog-item__image-mobile">
+                <img src="img/photo-hare-mobile@1x.jpg" class="catalog-item__image-mobile" width="258">
                 <img src="img/photo-hare-tablet@1x.jpg" class="catalog-item__image-tablet">
                 <img src="img/photo-hare-desktop@1x.jpg" class="catalog-item__image-desktop">
               </a>
@@ -73,7 +73,7 @@
           <li class="catalog-item__prodact">
             <div class="catalog-item__wrapper">
               <a href="" class="catalog-item__img-link link">
-                <img src="img/photo-bowl-mobile@1x.jpg" class="catalog-item__image-mobile">
+                <img src="img/photo-bowl-mobile@1x.jpg" class="catalog-item__image-mobile" width="258">
                 <img src="img/photo-bowl-tablet@1x.jpg" class="catalog-item__image-tablet">
                 <img src="img/photo-bowl-desktop@1x.jpg" class="catalog-item__image-desktop">
               </a>
@@ -89,7 +89,7 @@
           <li class="catalog-item__prodact">
             <div class="catalog-item__wrapper">
               <a href="" class="catalog-item__img-link link">
-                <img src="img/photo-toys-mobile@1x.jpg" class="catalog-item__image-mobile">
+                <img src="img/photo-toys-mobile@1x.jpg" class="catalog-item__image-mobile" width="258">
                 <img src="img/photo-toys-tablet@1x.jpg" class="catalog-item__image-tablet">
                 <img src="img/photo-toys-desktop@1x.jpg" class="catalog-item__image-desktop">
               </a>
@@ -107,7 +107,7 @@
 
       <section class="production-process">
         <h2 class="production-process__title">Процесс производства</h2>
-        <img src="img/video-mobile@1x.jpg" width="260" height="150" class="production-process__img-mobile">
+        <img src="img/video-mobile@1x.jpg" width="258" height="150" class="production-process__img-mobile">
         <img src="img/video-mobile@1x.jpg" width="668" height="455" class="production-process__img-tablet">
         <img src="img/video-mobile@1x.jpg" width="682" height="455" class="production-process__img-desktop">
         <p class="production-process__text">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
