--- a/source/form.html
+++ b/source/form.html
@@ -120,11 +120,11 @@
           </div>
           <div class="form__type filter">
             <label for="email-id" class="filter__title">E-mail</label>
-            <input class="email__value" type="email" name="email" id="email-id" required placeholder="Ваш Email*">
+            <input class="filter__list-email" type="email" name="email" id="email-id" required placeholder="Ваш Email*">
           </div>
           <div class="form__type filter">
                 <label for="comment-id" class="filter__title">Доп</label>
-                <textarea class="filter__list-text" type="email" name="email" id="comment-id" rows="4" cols="30" placeholder="Опишите все ваши пожелания к заказу*"></textarea>
+                <textarea class="filter__list-text" type="email" name="email" id="comment-id" rows="6" placeholder="Опишите все ваши пожелания к заказу"></textarea>
           </div>
           <div class="filter__wrapper">
           <p class="form-notice">*Поля обязательны для заполнения</p>
