--- a/source/form.html
+++ b/source/form.html
@@ -58,11 +58,11 @@
             <h2 class="filter__title">Тип</h2>
             <ul class="filter__list type">
               <li class="type__item">
-                <input class="visually-hidden type__input type__input--radio" type="radio" name="accessories" id="accessories-id">
+                <input class="visually-hidden type__input type__input--radio" type="radio" name="type" id="accessories-id">
                 <label class="type__name" for="accessories-id">Аксессуар для интерьера</label>
               </li>
               <li class="type__item">
-                <input class="visually-hidden type__input type__input--radio" type="radio" name="toy" id="toy-id">
+                <input class="visually-hidden type__input type__input--radio" type="radio" name="type" id="toy-id">
                 <label class="type__name" for="toy-id">Детская игрушка</label>
               </li>
             </ul>
