--- a/source/catalog.html
+++ b/source/catalog.html
@@ -68,7 +68,9 @@
                 <h3 class="catalog-item__title">Зайчик-попрыгайчик</h3>
               </a>
               <p class="catalog-item__characteristic">Рост 30 см вес 200 г</p>
-              <p class="catalog-item__price"> 1 200 руб.</p>
+              <div class="catalog-item__contener">
+                <p class="catalog-item__price"> 1 200 руб.</p><svg class="catalog-item__svg" width="20.294px" height="18.849px"><use xlink:href="#icon-cart"></use></svg>
+              </div>
             </div>
           </li>
           <li class="catalog-item__prodact">
@@ -86,7 +88,9 @@
                 <h3 class="catalog-item__title">Корзинка для белья</h3>
               </a>
               <p class="catalog-item__characteristic">Диаметр 15 см высота 10 см</p>
-              <p class="catalog-item__price"> 690 руб.</p>
+              <div class="catalog-item__contener">
+                <p class="catalog-item__price"> 690 руб.</p><svg class="catalog-item__svg" width="20.294px" height="18.849px"><use xlink:href="#icon-cart"></use></svg>
+              </div>
             </div>
           </li>
           <li class="catalog-item__prodact">
@@ -104,7 +108,9 @@
               <h3 class="catalog-item__title">Большая корзинка для игрушек</h3>
               </a>
               <p class="catalog-item__characteristic">Диаметр 30 см высота 30 см</p>
-              <p class="catalog-item__price"> 1 500 руб.</p>
+              <div class="catalog-item__contener">
+                <p class="catalog-item__price"> 1 500 руб.</p><svg class="catalog-item__svg" width="20.294px" height="18.849px"><use xlink:href="#icon-cart"></use></svg>
+              </div>
             </div>
           </li>
         </ul>
