Страница каталога мобильной версии

--- a/source/form.html
+++ b/source/form.html
@@ -144,7 +144,7 @@
           </li>
           <li class="social__item">
             <a class="social__link social__link--facebook link" href="https://www.facebook.com/htmlacademy"><p class="visually-hidden">Мы в Фейсбуке</p>
-              <svg width="14.962px" height="27.718px"><use xlink:href="#icon-fb"></use></svg>
+              <svg class="social__svg" width="14.962px" height="27.718px"><use xlink:href="#icon-fb"></use></svg>
             </a>
           </li>
           <li class="social__item">
