--- a/source/form.html
+++ b/source/form.html
@@ -113,11 +113,11 @@
               </div>
             </div>
           </div>
-          <div class="form__type filter filter__color">
+          <div class="form__type filter filter__color filter__tel">
             <label for="phone-id" class="filter__title filter__title--color">Тел</label>
             <input class="filter__list-phone" type="tel" name="phone" id="phone-id" required placeholder="+7 XXX XXX XX XX*">
           </div>
-          <div class="form__type filter filter__color">
+          <div class="form__type filter filter__color filter__mail">
             <label for="email-id" class="filter__title filter__title--color filter__email">E-mail</label>
             <input class="filter__list-email" type="email" name="email" id="email-id" required placeholder="Ваш Email*">
           </div>
