Готова планшетная версия

--- a/source/form.html
+++ b/source/form.html
@@ -58,7 +58,7 @@
             <h2 class="filter__title">Тип</h2>
             <ul class="filter__list type">
               <li class="type__item">
-                <input class="visually-hidden type__input type__input--radio" type="radio" name="type" id="accessories-id">
+                <input class="visually-hidden type__input type__input--radio" type="radio" name="type" id="accessories-id" checked>
                 <label class="type__name" for="accessories-id">Аксессуар для интерьера</label>
               </li>
               <li class="type__item">
@@ -80,7 +80,7 @@
               </li>
               <li class="color__item">
                 <input class="visually-hidden color-input color-input-checkbox" type="checkbox" name="tiffany" id="tiffany-id">
-                <label class="color__name" for="tiffany-id">"Тиффани"</label>
+                <label class="color__name" for="tiffany-id">&#171Тиффани&#187</label>
               </li>
               <li class="color__item">
                 <input class="visually-hidden color-input color-input-checkbox" type="checkbox" name="black" id="black-id">
