--- a/source/form.html
+++ b/source/form.html
@@ -25,6 +25,12 @@
             <use xlink:href="#icon-menu-close"></use>
           </svg>
         </a>
+        <a class="page-header__toggle page-header__toggle-close" href="">
+          <svg width="19.958px" height="14px">
+            <use xlink:href="#icon-menu-close"></use>
+          </svg>
+        </a>
+<!--Классы page-header__toggle-close и page-header__toggle будут переключать гамбургер на крестик-->
         <div class="page-header__site-list  page-header__site-list--order1">
           <a class="page-header__link link" href="catalog.html">Каталог товаров</a>
         </div>
@@ -36,7 +42,7 @@
             <svg class="page-header__search" width="17.6px" height="17.6px">
               <use xlink:href="#icon-search"></use>
             </svg>
-            <p class="page-header__link--hidden">Поиск по сайту</p>
+            <p class="page-header__link-hidden">Поиск по сайту</p>
           </a>
         </div>
         <div class="page-header__site-list page-header__site-list--order4">
@@ -56,6 +62,7 @@
         <div class="page-header__site-list page-header__site-list--order7">
           <a class="page-header__link page-header__link--tablet link" href="#">Бесплатная доставка по России</a>
         </div>
+<!--Класс page-header__menu--close взамен  page-header__site-list будет прятать все пункты меню-->
       </header>
       <div class="order-knitting">
         <div class="order-knitting__fon"></div>
@@ -135,7 +142,7 @@
             <label for="comment-id" class="filter__title">Доп</label>
             <textarea class="filter__list-text" id="comment-id" rows="6" placeholder="Опишите все ваши пожелания к заказу"></textarea>
           </div>
-          <div class="filter__wrapper">
+          <div class="form__wrapper">
             <p class="form-notice">*Поля обязательны для заполнения</p>
             <button class="form-button button" type="submit">Отправить заказ</button>
           </div>
