--- a/source/index.html
+++ b/source/index.html
@@ -25,7 +25,7 @@
             <use xlink:href="#icon-menu-open"></use>
           </svg>
         </a>
-        <a class="page-header__toggle--close" href="">
+        <a class="page-header__toggle page-header__toggle-close" href="">
           <svg width="19.958px" height="14px">
             <use xlink:href="#icon-menu-close"></use>
           </svg>
@@ -42,7 +42,7 @@
             <svg class="page-header__search" width="17.6px" height="17.6px">
               <use xlink:href="#icon-search"></use>
             </svg>
-            <p class="page-header__link--hidden">Поиск по сайту</p>
+            <p class="page-header__link-hidden">Поиск по сайту</p>
           </a>
         </div>
         <div class="page-header__site-list page-header__site-list--order4">
