Исправила замечания финальной проверки

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -62,7 +62,6 @@
         <div class="page-header__site-list page-header__site-list--order7">
           <a class="page-header__link page-header__link--tablet link" href="#">Бесплатная доставка по России</a>
         </div>
-<!--Класс page-header__menu--close взамен  page-header__site-list будет прятать все пункты меню-->
       </header>
       <div class="catalog">
         <div class="catalog__background"></div>
@@ -91,9 +90,11 @@
               <p class="catalog-item__characteristic">Рост 30 см вес 200 г</p>
               <div class="catalog-item__contener">
                 <p class="catalog-item__price"> 1 200 руб.</p>
-                <svg class="catalog-item__svg" width="20.294px" height="18.849px">
-                  <use xlink:href="#icon-cart"></use>
-                </svg>
+                <a class="catalog-item__cart" href="#">
+                  <svg class="catalog-item__svg" width="20.294px" height="18.849px">
+                    <use xlink:href="#icon-cart"></use>
+                  </svg>
+                </a>
               </div>
             </div>
           </li>
@@ -118,9 +119,11 @@
               <p class="catalog-item__characteristic">Диаметр 15 см высота 10 см</p>
               <div class="catalog-item__contener">
                 <p class="catalog-item__price"> 690 руб.</p>
-                <svg class="catalog-item__svg" width="20.294px" height="18.849px">
-                  <use xlink:href="#icon-cart"></use>
-                </svg>
+                <a class="catalog-item__cart" href="#">
+                  <svg class="catalog-item__svg" width="20.294px" height="18.849px">
+                    <use xlink:href="#icon-cart"></use>
+                  </svg>
+                </a>
               </div>
             </div>
           </li>
@@ -145,9 +148,11 @@
               <p class="catalog-item__characteristic">Диаметр 30 см высота 30 см</p>
               <div class="catalog-item__contener">
                 <p class="catalog-item__price"> 1 500 руб.</p>
-                <svg class="catalog-item__svg" width="20.294px" height="18.849px">
-                  <use xlink:href="#icon-cart"></use>
-                </svg>
+                <a class="catalog-item__cart" href="#">
+                  <svg class="catalog-item__svg" width="20.294px" height="18.849px">
+                    <use xlink:href="#icon-cart"></use>
+                  </svg>
+                </a>
               </div>
             </div>
           </li>
