--- a/source/index.html
+++ b/source/index.html
@@ -62,9 +62,9 @@
         <div class="page-header__site-list page-header__site-list--order7">
           <a class="page-header__link page-header__link--tablet link" href="#">Бесплатная доставка по России</a>
         </div>
-<!--Класс page-header__menu--close взамен  page-header__site-list будет прятать все пункты меню-->
       </header>
       <section class="product-category">
+        <h2 class="visually-hidden">Категории продуктов</h2>
         <div class="product-category__img"></div>
         <header class="product-category__header">
           <p class="product-category__title"> Милые штуки ручной<br>работы для дома</p>
@@ -83,6 +83,7 @@
         </div>
       </section>
       <section class="popular-product">
+        <h2 class="visually-hidden">Товар недели</h2>
         <div class="popular-product__flex">
           <header class="popular-product__header">Вязаные корзинки</header>
           <p class="popular-product__time">Товар недели</p>
@@ -115,7 +116,7 @@
             </picture>
           </div>
           <p class="popular-product__price">Цена: 990 руб.</p>
-          <button class="popular-product__button button" type="button">Заказать</button>
+          <a class="popular-product__button button" href="popular-product.html">Заказать</a>
         </div>
       </section>
       <section class="advantages">
@@ -189,6 +190,7 @@
       <section class="contacts">
         <h2 class="contacts__title">Контакты</h2>
         <section class="contacts__table">
+          <h3 class="visually-hidden">e-mail</h3>
           <div class="contacts__wrapper">
             <p class="contacts__adress-name">e-mail:</p>
             <p class="contacts__adress contacts__adress--underline">info@mimimishkashop.ru</p>
