--- a/source/form.html
+++ b/source/form.html
@@ -62,7 +62,6 @@
         <div class="page-header__site-list page-header__site-list--order7">
           <a class="page-header__link page-header__link--tablet link" href="#">Бесплатная доставка по России</a>
         </div>
-<!--Класс page-header__menu--close взамен  page-header__site-list будет прятать все пункты меню-->
       </header>
       <div class="order-knitting">
         <div class="order-knitting__fon"></div>
@@ -143,8 +142,8 @@
             <textarea class="filter__list-text" id="comment-id" rows="6" placeholder="Опишите все ваши пожелания к заказу"></textarea>
           </div>
           <div class="form__wrapper">
-            <p class="form-notice">*Поля обязательны для заполнения</p>
-            <button class="form-button button" type="submit">Отправить заказ</button>
+            <p class="form__notice">*Поля обязательны для заполнения</p>
+            <button class="form__button button" type="submit">Отправить заказ</button>
           </div>
         </form>
       </section>
