--- a/source/catalog.html
+++ b/source/catalog.html
@@ -38,7 +38,7 @@
           <a class="page-header__link link" href="form.html">Вязание на заказ</a>
         </div>
         <div class="page-header__site-list page-header__site-list--order3">
-          <a class="page-header__link  link" href="">
+          <a class="page-header__link  page-header__link--search link" href="">
             <svg class="page-header__search" width="17.6px" height="17.6px">
               <use xlink:href="#icon-search"></use>
             </svg>
@@ -90,7 +90,7 @@
               <p class="catalog-item__characteristic">Рост 30 см вес 200 г</p>
               <div class="catalog-item__contener">
                 <p class="catalog-item__price"> 1 200 руб.</p>
-                <a class="catalog-item__cart" href="#">
+                <a class="catalog-item__cart" href="product1.html">
                   <svg class="catalog-item__svg" width="20.294px" height="18.849px">
                     <use xlink:href="#icon-cart"></use>
                   </svg>
@@ -119,7 +119,7 @@
               <p class="catalog-item__characteristic">Диаметр 15 см высота 10 см</p>
               <div class="catalog-item__contener">
                 <p class="catalog-item__price"> 690 руб.</p>
-                <a class="catalog-item__cart" href="#">
+                <a class="catalog-item__cart" href="product2.html">
                   <svg class="catalog-item__svg" width="20.294px" height="18.849px">
                     <use xlink:href="#icon-cart"></use>
                   </svg>
@@ -148,7 +148,7 @@
               <p class="catalog-item__characteristic">Диаметр 30 см высота 30 см</p>
               <div class="catalog-item__contener">
                 <p class="catalog-item__price"> 1 500 руб.</p>
-                <a class="catalog-item__cart" href="#">
+                <a class="catalog-item__cart" href="product3.html">
                   <svg class="catalog-item__svg" width="20.294px" height="18.849px">
                     <use xlink:href="#icon-cart"></use>
                   </svg>
@@ -217,6 +217,18 @@
           </a>
         </div>
       </footer>
+      <section class="modal-order">
+        <h2 class="modal-order__title">Добавить в корзину</h2>
+        <p class="modal-order__text">Выберите размер:</p>
+        <div class="modal-order__wrapper">
+          <div class="modal-order__size">S</div>
+          <div class="modal-order__size">M</div>
+          <div class="modal-order__size">L</div>
+        </div>
+        <button class="modal-order__button button" type="button">Заказать</button>
+      </section>
     </div>
+    <div class="overlay"></div>
+    <script src="js/script_catalog.min.js"></script>
   </body>
 </html>
